--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.3
-python-dotenv==1.0.0
-google-generativeai==0.1.0
-Pillow==10.0.0
+Flask
+python-dotenv
+google-generativeai
+Pillow
 gunicorn
